# FileBridge

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  phone_ui.html  server.rs
src/app/: globals.css  layout.tsx  page.tsx
