[package]
name = "filebridge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "filebridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
axum = "0.7"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
local-ip-address = "0.6.10"
multer = "3.1.0"
axum-core = "0.4"
futures-util = "0.3.32"
bytes = "1.11.1"
axum-server = "0.8.0"
hyper = { version = "0.14", features = ["server", "tcp"] }
hyper-util = { version = "0.1", features = ["server", "server-auto"] }
rustls = "0.23.37"
once_cell = "1.21.3"

